samples/_failures_safe/1761128987_b253e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_857d8e4b.c: In function ‘main’:
./samples/SAFE/__tmp_857d8e4b.c:145:16: error: missing terminating " character
  145 |         printf("Decompression size mismatch\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_857d8e4b.c:145:9: error: expected expression at end of input
  145 |         printf("Decompression size mismatch\n
      |         ^~~~~~
./samples/SAFE/__tmp_857d8e4b.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_857d8e4b.c:145:9: error: expected declaration or statement at end of input
